# CSA

CSA1/: help.txt  report.txt
CSA1/results/: res1.1.txt  res1.2.txt  res1.3.txt  res10.1.txt  res10.2.txt  res10.3.txt  res11.1.txt  res11.2.txt  res11.3.txt  res2.1.txt  res2.2.txt  res2.3.txt  res3.1.txt  res3.2.txt  res3.3.txt  res4.1.txt  res4.2.txt  res4.3.txt  res5.1.txt  res5.2.txt  res5.3.txt  res6.1.txt  res6.2.txt  res6.3.txt  res7.1.txt  res7.2.txt  res7.3.txt  res8.1.txt  res8.2.txt  res8.3.txt  res9.1.txt  res9.2.txt  res9.3.txt
CSA1/sourse files/: CMakeLists.txt  container.cpp  container.h  flower.cpp  flower.h  main.cpp  plant.cpp  plant.h  rnd.h  shrub.cpp  shrub.h  stringHelper.cpp  stringHelper.h  tree.cpp  tree.h
CSA1/tests/: test1.2.txt
CSA2/: report.txt
CSA2/results/: res1.1.txt  res1.2.txt  res1.3.txt  res10.1.txt  res10.2.txt  res10.3.txt  res11.1.txt  res11.2.txt  res11.3.txt  res2.1.txt  res2.2.txt  res2.3.txt  res3.1.txt  res3.2.txt  res3.3.txt  res4.1.txt  res4.2.txt  res4.3.txt  res5.1.txt  res5.2.txt  res5.3.txt  res6.1.txt  res6.2.txt  res6.3.txt  res7.1.txt  res7.2.txt  res7.3.txt  res8.1.txt  res8.2.txt  res8.3.txt  res9.1.txt  res9.2.txt  res9.3.txt
CSA2/sourse files/: CMakeLists.txt  container.cpp  container.h  flower.cpp  flower.h  main.cpp  plant.cpp  plant.h  rnd.cpp  rnd.h  shrub.cpp  shrub.h  tree.cpp  tree.h
CSA3/: report.txt
CSA3/results/: res1.1.txt  res1.2.txt  res1.3.txt  res10.1.txt  res10.2.txt  res10.3.txt  res11.1.txt  res11.2.txt  res11.3.txt  res2.1.txt  res2.2.txt  res2.3.txt  res3.1.txt  res3.2.txt  res3.3.txt  res4.1.txt  res4.2.txt  res4.3.txt  res5.1.txt  res5.2.txt  res5.3.txt  res6.1.txt  (+11 more)
CSA5/: report.txt
CSA5/sourse files/: CMakeLists.txt  Logger.cpp  Logger.h  Silver.cpp  Silver.h  main.cpp
(+72 files in other folders)
